# STADIC

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  STADICCPack.cmake  export.py  makeall-modified  radiance-build.sh
boost-process/: README.md
boost-process/boost/process/: operations.hpp  self.hpp
dependencies/: README.md
doc/: AddingNewPrimitives.md  ContributionPolicy.md  DeveloperWorkflow.md  dxgridmaker.1
lib/: CMakeLists.txt  analemma.cpp  analemma.h  buildingcontrol.cpp  buildingcontrol.h  controlzone.cpp  controlzone.h  dayill.cpp  dayill.h  daylight.cpp  daylight.h  elecill.cpp  elecill.h  electriclight.cpp  electriclight.h  filepath.cpp  filepath.h  functions.cpp  functions.h  geometryprimitives.cpp  geometryprimitives.h  grid_maker.cpp  gridmaker.cpp  gridmaker.h  jsonobjects.cpp  jsonobjects.h  leakcheck.cpp  leakcheck.h  logging.cpp  logging.h  makewea.cpp  makewea.h  materialprimitives.cpp  materialprimitives.h  metrics.cpp  metrics.h  objects.cpp  objects.h  parserad.cpp  parserad.h  (+30 more)
resources/: TestSControl.json
scripts/: input.txt  install-radiance.sh
test/: AnalemmaTests.cpp  CMakeLists.txt  RadFileTests.cpp  TestResource.qrc  analemmatests.cpp  controltests.cpp  daylighttest.cpp  electrictests.cpp  filepathtests.cpp  functiontests.cpp  gridtests.cpp  illuminancetests.cpp  leaktests.cpp  objectstests.cpp  objecttests.cpp  primitivetests.cpp  processtests.cpp  radfiletests.cpp  radparsertests.cpp  sensortests.cpp  shadeprocesstest.cpp  testprogram.cpp  weathertests.cpp
test/resources/: 10PointsNonTimeBased.ill  10PointsTimeBased.ill  LancasterTMY.csv  Simple.rad  TestSControl.json  badglassmaterial.rad  badmetalmaterial.rad  badplasticmaterial.rad  badpolygongeometry.rad  badtransmaterial.rad  complicated.rad  control.json  diamond.rad  glassmaterial.rad  material.rad  materialsingleline.rad  plasticmaterial.rad  simplehole.rad  supportedprimitives.rad
test/resources/daylightcase1/: JSON_TEST1.txt
test/resources/daylightcase1/data/: 8to6.csv  state_college.epw
test/resources/daylightcase1/ies/: Pendant.ies
test/resources/daylightcase1/rad/: geom1.rad  mat1.rad  shade.rad
test/resources/standard/: SimpleStd.json
test/resources/standard/data/: Lancaster.wea
test/resources/standard/rad/: Simple.rad  SimpleShadesFull.rad  SimpleShadesHalf.rad
utilities/: CMakeLists.txt  dxanalemma.cpp  dxdaylight.cpp  dxelectric.cpp  dxgridmaker.cpp  dxleakcheck.cpp  dxmakesensor.cpp  dxmakewea.cpp  dxmetrics.cpp  dxprocessshade.cpp
wea/: make_wea.cpp
